# localize_it

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: lib.rs
examples/example/: Cargo.toml
examples/example/src/: main.rs
examples/expressions_from_files/: Cargo.toml
examples/expressions_from_files/src/: main.rs
examples/expressions_from_files/src/locale/: en.rs  mod.rs  ru.rs
examples/from_files_structure_showcase/: Cargo.toml
examples/from_files_structure_showcase/src/: main.rs
examples/from_files_structure_showcase/src/locale/: mod.rs
examples/from_files_structure_showcase/src/locale/flag/: en.rs  ru.rs
examples/from_files_structure_showcase/src/locale/message/: en.rs  mod.rs  ru.rs
examples/hello_app/: Cargo.toml
examples/hello_app_cli/: Cargo.toml
examples/hello_app_cli/src/: main.rs
examples/structure_showcase/: Cargo.toml
examples/structure_showcase/src/: main.rs
examples/structure_showcase/src/locale/: flag.rs  message.rs  mod.rs
src/: expression.rs  expressions.rs  init.rs  init_locale.rs  init_locale_with_storage.rs  lib.rs  locale_types.rs  localize.rs
src/arguments/: mod.rs
src/backend/: mod.rs
src/backends/: mod.rs
src/backends/expression/: arguments.rs  backend.rs  mod.rs  static_expression.rs
src/backends/expressions_from_files/: arguments.rs  backend.rs  mod.rs  static_expressions.rs
src/backends/expressions_from_files/arguments/: expression.rs  locale.rs  mod.rs
src/backends/expressions_from_files/backend/: mod.rs
src/backends/expressions_from_files/parts/: mod.rs  static_expression.rs
src/backends/init_locale/: arguments.rs  backend.rs  mod.rs
src/backends/init_locale/arguments/: mod.rs  variant.rs
src/backends/init_locale/arguments/variants/: mod.rs
src/backends/init_locale/backend/: mod.rs
src/backends/init_locale/parts/: enum_locale.rs  macro_expression.rs  macro_expression_part.rs  macro_expressions.rs  macro_expressions_from_files.rs  macro_expressions_part.rs  macro_localize.rs  mod.rs  mod_storage.rs
src/init_locale/: default_const.rs  mod.rs
src/input/: item.rs  mod.rs
src/names/: mod.rs
src/parts/: enum_locale.rs  macro_expression.rs  macro_expressions.rs  macro_localize.rs  mod.rs  mod_storage.rs
src/utils/: aliases.rs  argument_processor.rs  errors.rs  mod.rs  path_argument.rs  run_backend.rs
src/utils/errors/: crate_not_found_error.rs  duplicate_argument_error.rs  locale_variant_position_error.rs  mod.rs  no_comma_between_argument_error.rs  no_locale_variant_error.rs  required_argument_error.rs  type_error.rs  unknown_argument_error.rs
src/utils/input/: argument.rs  mod.rs  types.rs
src/utils/names/: mod.rs  provider.rs  utils.rs
src/utils/typed_parse/: for_parse_stream.rs  mod.rs
tests/: enum_locale.rs  features.rs  init.rs  locale.rs  localize.rs  localize_and_storage.rs  macro_localize.rs  main.rs  mod_storage.rs  storage.rs  str_conversions.rs  usize_conversions.rs
tests/common/: mod.rs
tests/locale/: error.rs  expressions.rs  mod.rs  ui.rs
tests/locale_with_storage/: error.rs  mod.rs
(+5 files in other folders)
