[package]
name = "localize_it"
version = "1.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Ivan Sarnitskii <ivan.sarnitskiy@mail.ru>"]
license = "MIT OR Apache-2.0"
keywords = ["localization", "l10n", "internationalization", "i18n", "translation"]
categories = ["localization", "internationalization", "no-std", "no-std::no-alloc"]
description = "Simple and fast library for localization"
repository = "https://github.com/ZenKerr/localize_it"
homepage = "https://github.com/ZenKerr/localize_it"
documentation = "https://docs.rs/localize_it"
readme = "README.md"
exclude = [".github", "/tests", ".gitignore"]

[lib]
doctest = false
