[package]
name = "localize_it"
version = "1.4.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Ivan Sarnitskii <ivan.sarnitskiy@mail.ru>"]
license = "MIT OR Apache-2.0"
keywords = ["localization", "l10n", "internationalization", "i18n", "translation"]
categories = ["localization", "internationalization", "no-std", "no-std::no-alloc"]
description = "Simple and fast library for localization"
repository = "https://github.com/ZenKerr/localize_it"
homepage = "https://github.com/ZenKerr/localize_it"
documentation = "https://docs.rs/localize_it"
readme = "README.md"
exclude = [".github", "tests", ".gitignore"]

[lib]
doctest = false

[dev-dependencies]
serde_assert = "0.8.0"

[dependencies]
serde = { version = "1.0.228", default-features = false, optional = true }
nanoserde = { version = "0.2.1", default-features = false, optional = true }
miniserde = { version = "0.1.45", default-features = false, optional = true }
borsh = { version = "1.6.0", default-features = false, optional = true }

[features]
serde = ["serde/derive"]
nanoserde_json = ["nanoserde/json"]
nanoserde_binary = ["nanoserde/binary"]
nanoserde_ron = ["nanoserde/ron"]
miniserde = ["dep:miniserde"]
borsh = ["borsh/derive"]
