[package]
name = "localize_it"
version = "2.3.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Ivan Sarnitskii <ivan.sarnitskiy@mail.ru>"]
license = "MIT OR Apache-2.0"
keywords = ["localization", "l10n", "internationalization", "i18n", "translation"]
categories = ["localization", "internationalization", "no-std", "no-std::no-alloc"]
description = "Simple and fast library for localization"
repository = "https://github.com/ZenKerr/localize_it"
homepage = "https://github.com/ZenKerr/localize_it"
documentation = "https://docs.rs/localize_it"
readme = "README.md"
exclude = [".github", ".gitignore"]

[lib]
proc-macro = true
doctest = false

[[bench]]
name = "lib"
harness = false

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }

[dependencies]
syn = { version = "2.0.117", features = ["full", "visit"] }
quote = { version = "1.0.45" }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
proc-macro-crate = { version = "3.5.0" }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }

[features]
from_files = []
